@@ -1,10 +1,10 @@
 {
-  "count": 4886,
+  "count": 4899,
   "uniques": 12,
   "clones": [
     {
       "timestamp": "2022-05-25T00:00:00Z",
-      "count": 288,
+      "count": 180,
       "uniques": 1
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-06-07T00:00:00Z",
       "count": 354,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-08T00:00:00Z",
+      "count": 121,
       "uniques": 2
     }
   ]
