@@ -1,3 +1,10 @@
+2022-06-08T08:30:53Z:
+* notice: last 14d: unq all: 12 4899
+* notice: prev accum: outdated-unq outdated-all / unq all: 597 26210 / 632 31096
+* notice: next accum: outdated-unq outdated-all / unq all: 597 26210 / 634 31109
+* notice: prev exec diff / last date diff / accum: unq all: +2 +121 -0 -108 / +2 +121 -0 -0 / 2 121
+* notice: removed / changed dates: [] / [2022-05-25 2022-06-08]
+
 2022-06-08T01:58:49Z:
 * notice: last 14d: unq all: 12 4886
 * notice: prev accum: outdated-unq outdated-all / unq all: 596 25858 / 632 30756
